--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: 'https://github.com/GabsEdits/weather'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
